[package]
name = "reuseport"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
socket2 = { version = "0.6", features = ["all"] }